@@ -20,6 +20,7 @@ Import-Package: com.openexchange.capabilities,
  com.openexchange.threadpool,
  com.openexchange.tools.session,
  com.openexchange.tools.versit.converter,
+ javax.mail.internet,
  org.apache.commons.httpclient,
  org.apache.commons.httpclient.auth,
  org.apache.commons.httpclient.cookie,
@@ -28,6 +29,7 @@ Import-Package: com.openexchange.capabilities,
  org.apache.commons.httpclient.params,
  org.apache.commons.httpclient.protocol,
  org.apache.commons.httpclient.util,
+ org.apache.commons.lang.time,
  org.apache.commons.logging,
  org.json,
  org.osgi.framework,
